sandc/test/fixtures/astRegression/shouldSucceed/AbstractClass.sand
pub abstract class AbstractClass {
    abstract abstractMethod(this);

    abstract absReturn(this): int;

    pub abstract pubAbstract(this): int;

    open openMethod() {

    }

    open openReturn(): int {

    }

    pub open pubOpen(): int {

    }

    prot nonOpen() {

    }

    privMethod() {
        
    }
}

abstract class AbstractPriv {
    abstract abstractMethod(this);

    abstract absReturn(this): int;

    pub abstract pubAbstract(this): int;

    open openMethod() {

    }

    open openReturn(): int {

    }

    pub open pubOpen(): int {

    }

    prot nonOpen() {

    }

    privMethod() {
        
    }
}