sandc/test/fixtures/astRegression/shouldFail/productions/classInstanceMethodDeclaration/ProtAbstract.sand
pub class ProtAbstract {
    prot abstract foo() {
        
    }
}